--- a/src/styles/_desktop_1440.scss
+++ b/src/styles/_desktop_1440.scss
@@ -4,9 +4,6 @@
   padding: 0;
   font-family: Inter, sans-serif;
   font-style: normal;
-
-
-
 }
 
 body {
@@ -14,7 +11,6 @@ body {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
-  font-family: Inter, sans-serif;
   color: #1c1a26;
   overflow-x: hidden;
   display: flex;
@@ -77,10 +73,9 @@ body {
   background: url(../images/bakerlab_desktop.png) center/contain no-repeat;
   width: 127px;
   height: 24px;
-  display: block;      /* faz o <a> se comportar como bloco */
-  cursor: pointer;     /* opcional, mas melhora UX */
+  display: block; /* faz o <a> se comportar como bloco */
+  cursor: pointer; /* opcional, mas melhora UX */
 }
-
 
 .baker_lab:hover {
   transform: scale(1.1);
@@ -101,7 +96,6 @@ body {
 .about_us,
 .products,
 .blog {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 16px;
@@ -187,7 +181,6 @@ body {
 }
 
 .title_product_main {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 72px;
@@ -207,7 +200,6 @@ body {
 }
 
 .title_product_cakes {
-  font-family: Inter, sans-serif;
   font-weight: 500;
   font-style: Medium;
   font-size: 16px;
@@ -219,7 +211,6 @@ body {
 }
 
 .subtitle_product {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 16px;
@@ -232,7 +223,6 @@ body {
 }
 
 .title_product {
-  font-family: Inter, sans-serif;
   font-weight: 500;
   font-style: Medium;
   font-size: 16px;
@@ -243,7 +233,6 @@ body {
 }
 
 .description_products-1 {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 16px;
@@ -254,7 +243,6 @@ body {
 }
 
 .description_products-cake {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 16px;
@@ -335,6 +323,7 @@ body {
   padding-top: 575px;
   display: flex;
   flex-direction: column;
+  border-radius: 8px !important;
   gap: 15px;
 }
 
@@ -414,7 +403,6 @@ body {
 }
 
 .stats_description {
-  font-family: Inter, sans-serif;
   font-weight: 400;
   font-style: Regular;
   font-size: 16px;
@@ -487,7 +475,9 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
-  transition: transform 0.1s, filter 0.2s;
+  transition:
+    transform 0.1s,
+    filter 0.2s;
 }
 
 .facebook {
