--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -1,8 +1,8 @@
 @media (max-width: 320px) {
-* {
-  font-family: Inter, sans-serif;
-  font-style: normal;
-}
+  * {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+  }
 
   html,
   body {
@@ -174,7 +174,7 @@
 
   .mobile-modal-content h3 {
     margin: 0 0 25px;
-    font-family: Inter, sans-serif;
+
     font-size: 20px;
     font-weight: 500;
     text-transform: uppercase;
@@ -185,7 +185,7 @@
     display: block;
     padding: 12px;
     margin: 8px 0;
-    font-family: Inter, sans-serif;
+
     font-size: 16px;
     color: #1c1a26;
     text-decoration: none;
@@ -238,7 +238,7 @@
     width: 288px;
     height: 48px;
     font-size: 16px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     line-height: 150%;
     letter-spacing: -1%;
@@ -254,7 +254,6 @@
     width: 310px;
     height: 116px;
 
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 64px;
@@ -283,7 +282,6 @@
   }
 
   .title_product_main {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 48px;
@@ -296,7 +294,6 @@
     margin-top: 20%;
   }
   .subtitle_product {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 16px;
@@ -316,7 +313,6 @@
     gap: 20px;
   }
   .title_product_cakes {
-    font-family: Inter, sans-serif;
     font-weight: 500;
     font-style: Medium;
     font-size: 16px;
@@ -328,7 +324,6 @@
   }
 
   .description_products-1 {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 16px;
@@ -338,7 +333,6 @@
     width: 328px;
   }
   .description_products-cake {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 16px;
@@ -348,7 +342,6 @@
     width: 280px;
   }
   .order_button {
-    font-family: Inter, sans-serif;
     font-weight: 500;
     font-size: 16px;
     text-transform: uppercase;
@@ -388,7 +381,7 @@
 
   .first_products_row {
     width: 288px;
-    height: 3950px;
+    height: 3450px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -400,74 +393,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 75px;
+    gap: 50px;
     margin-top: 50px;
   }
 
-  .product-1 {
-    width: 288px;
-    height: 492px;
-    background-image: url(../images/product_1_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    text-align: start;
-    padding-top: 400px;
-  }
-  .product-2 {
-    width: 288px;
-    height: 492px;
-    background-image: url(../images/product_2_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 400px;
-    box-sizing: border-box;
-    gap: 15px;
-  }
   .product_images-2 {
     width: 288px;
     height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 90px;
-    margin-top: 120px;
-  }
-
-  .product-3 {
-    width: 288px;
-    height: 492px;
-    background-image: url(../images/product_3_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 400px;
-    box-sizing: border-box;
-  }
-
-  .product-4 {
-    width: 288px;
-    height: 492px;
-    background-image: url(../images/product_4_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 400px;
-    box-sizing: border-box;
+    gap: 50px;
+    margin-top: 60px;
   }
 
   .product_images-3 {
@@ -476,38 +413,59 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap: 170px;
-    margin-top: 80px;
+    gap: 60px;
+  }
+
+  .product-base {
+    width: 288px;
+    height: 492px;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    border-radius: 8px !important;
+  }
+
+  .product-1 {
+    background-image: url(../images/product_1_desktop.png);
+    background-size: 288px 356px;
+    padding-top: 380px;
+  }
+
+  .product-2 {
+    background-image: url(../images/product_2_desktop.png);
+    background-size: 288px 356px;
+    padding-top: 380px;
+  }
+
+  .product-3 {
+    background-image: url(../images/product_3_desktop.png);
+    background-size: 288px 356px;
+    padding-top: 380px;
+  }
+
+  .product-4 {
+    background-image: url(../images/product_4_desktop.png);
+    background-size: 288px 356px;
+    padding-top: 380px;
   }
 
   .product-5 {
-    width: 288px;
-    height: 492px;
     background-image: url(../images/product_5_desktop.png);
-    background-repeat: no-repeat;
-    background-size: 402px 530px;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
+    background-size: 288px 356px;
+    padding-top: 380px;
   }
 
   .product-6 {
-    width: 288px;
-    height: 492px;
     background-image: url(../images/product_6_desktop.png);
-    background-size: 402px 530px;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
+    background-size: 288px 356px;
+    padding-top: 380px;
     gap: 5px;
   }
   .title_product {
-    font-family: Inter, sans-serif;
     font-weight: 500;
     font-style: Medium;
     font-size: 16px;
@@ -540,7 +498,7 @@
   .few_words {
     width: 300px;
     height: 96px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-style: Regular;
     font-size: 46px;
@@ -552,7 +510,7 @@
   .words {
     width: 270px;
     height: 216px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-style: Regular;
     font-size: 15px;
@@ -580,7 +538,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-size: 96px;
     line-height: 85%;
@@ -651,7 +609,7 @@
   .contact_us_footer {
     width: 320px;
     height: 300px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-style: Regular;
     font-size: 56px;
