--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -1,8 +1,8 @@
 @media (max-width: 768px) {
-* {
-  font-family: Inter, sans-serif;
-  font-style: normal;
-}
+  * {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+  }
 
   html,
   body {
@@ -67,28 +67,27 @@
     opacity: 0;
   }
 
-.contact_us {
-  position: relative;
-  z-index: 1;
-  background-image: url(../images/icon_menu.png);
-  background-size: 20px 8px;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 44px;
-  height: 44px;
-  border: none;
-  padding: 0;
-  cursor: pointer;
+  .contact_us {
+    position: relative;
+    z-index: 1;
+    background-image: url(../images/icon_menu.png);
+    background-size: 20px 8px;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 44px;
+    height: 44px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 
-  text-indent: -9999px;
-  overflow: hidden;
-  white-space: nowrap;
+    text-indent: -9999px;
+    overflow: hidden;
+    white-space: nowrap;
 
-  display: block;
+    display: block;
 
-  outline: none;
-
-}
+    outline: none;
+  }
 
   .baker_logo_modal {
     width: 127px;
@@ -162,7 +161,7 @@
 
   .mobile-modal-content h3 {
     margin: 0 0 25px;
-    font-family: Inter, sans-serif;
+
     font-size: 20px;
     font-weight: 500;
     text-transform: uppercase;
@@ -173,7 +172,7 @@
     display: block;
     padding: 12px;
     margin: 8px 0;
-    font-family: Inter, sans-serif;
+
     font-size: 16px;
     color: #1c1a26;
     text-decoration: none;
@@ -219,7 +218,6 @@
     justify-content: space-between;
     text-align: left;
     box-sizing: border-box;
-
   }
 
   /* ===== TEXTO PRINCIPAL: ESQUERDA ===== */
@@ -250,7 +248,8 @@
     height: 56px !important;
     font-size: 16px;
     margin: 0 auto;
-    background: url(../images/icon_button_learn.png) 80px center / 20px 20px no-repeat;
+    background: url(../images/icon_button_learn.png) 80px center / 20px 20px
+      no-repeat;
     border: 2px solid #f9512e;
     border-radius: 32px;
     color: #f9512e;
@@ -262,7 +261,6 @@
     justify-content: center;
     padding-left: 60px;
     box-sizing: border-box;
-
   }
 
   .titles {
@@ -273,10 +271,8 @@
     display: flex;
     flex-direction: column;
     gap: -80px;
-
   }
   .title_product_cakes {
-    font-family: Inter, sans-serif;
     font-weight: 500;
     font-style: Medium;
     font-size: 16px;
@@ -288,7 +284,6 @@
   }
 
   .description_products-1 {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 16px;
@@ -298,7 +293,6 @@
     width: 328px;
   }
   .description_products-cake {
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-style: Regular;
     font-size: 16px;
@@ -308,7 +302,6 @@
     width: 280px;
   }
   .order_button {
-    font-family: Inter, sans-serif;
     font-weight: 500;
     font-size: 16px;
     text-transform: uppercase;
@@ -352,65 +345,62 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    height: 2316px;
+    height: 2200px;
   }
-  .product-1 {
-    width: 328px;
-    height: 424px;
 
+  .product-base {
+    width: 100%;
+    height: 424px;
+    background-repeat: no-repeat;
+    background-position: top center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    text-align: start;
+    border-radius: 8px !important;
+    box-sizing: border-box;
+  }
+
+  .product-1 {
     background-image: url(../images/product_1_desktop.png);
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     padding-top: 440px;
-    box-sizing: border-box;
     gap: 15px;
   }
+
   .product-2 {
-    width: 328px;
-    height: 424px;
     background-image: url(../images/product_2_desktop.png);
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     padding-top: 440px;
-    box-sizing: border-box;
     gap: 15px;
   }
 
   .product-3 {
-    width: 328px;
-    height: 424px;
     background-image: url(../images/product_3_desktop.png);
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     padding-top: 440px;
-    box-sizing: border-box;
   }
 
   .product-4 {
-    width: 328px;
-    height: 424px;
     background-image: url(../images/product_4_desktop.png);
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     padding-top: 440px;
-    box-sizing: border-box;
+  }
+
+  .product-5 {
+    background-image: url(../images/product_5_desktop.png);
+    background-size: 402px 530px;
+    padding-top: 420px;
+  }
+
+  .product-6 {
+    background-image: url(../images/product_6_desktop.png);
+    background-size: 402px 530px;
+    background-size: contain;
+    padding-top: 440px;
+    gap: 15px;
+    text-align: start;
   }
 
   .product_images-1,
@@ -422,63 +412,32 @@
     display: flex;
     justify-content: space-around;
   }
-  .product-5 {
-    width: 328px;
-    height: 424px;
-    background-image: url(../images/product_5_desktop.png);
-    background-repeat: no-repeat;
-    background-size: 402px 530px;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
+
+  .title_product_main {
+    font-weight: 400;
+    font-size: 56px;
+    line-height: 85%;
+    letter-spacing: -5%;
+    text-transform: uppercase;
+    margin: 0 25% 4px 0;
   }
 
-  .product-6 {
-    width: 328px;
-    height: 424px;
-    background-image: url(../images/product_6_desktop.png);
-    background-size: 402px 530px;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 550px;
-    box-sizing: border-box;
-    gap: 5px;
+  .subtitle_product {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: -1%;
+    margin: 0;
   }
 
- .title_product_main {
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 56px;
-  line-height: 85%;
-  letter-spacing: -5%;
-  text-transform: uppercase;
-  margin: 0 25% 4px 0;
-}
-
-.subtitle_product {
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
-  margin: 0;
-}
-
-.title_product {
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
-  text-transform: uppercase;
-  color: #7f8096;
-  margin: 2px 0 0 15px;
-}
+  .title_product {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 2%;
+    text-transform: uppercase;
+    color: #7f8096;
+  }
   .information_about_us {
     width: 680px;
     height: 596px;
@@ -503,20 +462,19 @@
   .few_words {
     width: 325px;
     height: 96px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-style: Regular;
     font-size: 50px;
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
-
   }
 
   .words {
     width: 340px;
     height: 216px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-style: Regular;
     font-size: 15px;
@@ -531,7 +489,6 @@
     justify-content: space-between;
     align-items: flex-start;
     text-align: start;
-
   }
 
   .stores,
@@ -543,7 +500,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-size: 96px;
     line-height: 85%;
@@ -602,7 +559,6 @@
   .social_buttons {
     width: 220px;
     margin-top: 20px;
-
   }
 
   .contact_us_footer {
@@ -610,7 +566,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    font-family: Inter, sans-serif;
+
     font-weight: 400;
     font-size: 56px;
     line-height: 85%;
@@ -627,7 +583,7 @@
     gap: 16px;
   }
 
-  .call_us{
+  .call_us {
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
@@ -641,7 +597,7 @@
     color: #7f8096;
     margin-top: 30px;
   }
-  .phone{
+  .phone {
     font-size: 15px;
     color: white;
     line-height: 1.3;
