--- a/src/styles/_desktop_1200.scss
+++ b/src/styles/_desktop_1200.scss
@@ -1,9 +1,8 @@
 @media (max-width: 1200px) {
-* {
-  font-family: Inter, sans-serif;
-  font-style: normal;
-}
-
+  * {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+  }
 
   body {
     width: 100%;
@@ -29,10 +28,10 @@
     align-items: center;
     text-align: center;
   }
-.contact_nav{
-  text-align: start;
-  margin-top: 5px;
-}
+  .contact_nav {
+    text-align: start;
+    margin-top: 5px;
+  }
   .nav_baker {
     width: 120px;
   }
@@ -83,7 +82,6 @@
   }
 
   .title_product_main {
-    font-family: Inter, sans-serif;
     font-size: 72px;
     font-weight: 400;
     font-style: normal;
@@ -103,7 +101,6 @@
   }
 
   .title_product_cakes {
-    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 500;
     font-style: normal;
@@ -117,7 +114,7 @@
     width: 584px;
     height: 24px;
     margin-left: 15px;
-    font-family: Inter, sans-serif;
+
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -134,23 +131,7 @@
     justify-content: space-between;
   }
 
-  .product-1 {
-    width: 402px;
-    height: 512px;
-    background-image: url(../images/product_1_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 530px;
-    box-sizing: border-box;
-    gap: 15px;
-  }
-
   .title_product {
-    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 500;
     font-style: normal;
@@ -161,8 +142,8 @@
   }
 
   .description_products-1 {
-    width: 432px;
-    font-family: Inter, sans-serif;
+    width: 402px;
+
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -173,7 +154,7 @@
 
   .description_products-cake {
     width: 280px;
-    font-family: Inter, sans-serif;
+
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -185,7 +166,7 @@
   .order_button {
     width: 120px;
     height: 32px;
-    font-family: Inter, sans-serif;
+
     font-size: 16px;
     font-weight: 500;
     line-height: normal;
@@ -222,21 +203,6 @@
     background-size: contain;
   }
 
-  .product-2 {
-    width: 402px;
-    height: 512px;
-    background-image: url(../images/product_2_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 530px;
-    box-sizing: border-box;
-    gap: 15px;
-  }
-
   .first_products_row {
     max-width: 1112px;
     margin: 0 auto;
@@ -260,72 +226,63 @@
     justify-content: space-between;
   }
 
-  .product-3 {
-    width: 402px;
-    height: 512px;
-    background-image: url(../images/product_3_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 530px;
-    box-sizing: border-box;
-    gap: 15px;
-  }
-
-  .product-4 {
-    width: 402px;
-    height: 512px;
-    background-image: url(../images/product_4_desktop.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 530px;
-    box-sizing: border-box;
-    gap: 15px;
-  }
-
   .product_images-3 {
     width: 825px;
-    height: 696px;
+    height: 725px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
 
-  .product-5 {
+  .product-base {
     width: 402px;
     height: 512px;
-    background-image: url(../images/product_5_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 530px;
     box-sizing: border-box;
-    gap: 5px;
+    border-radius: 8px !important;
+    text-align: start;
+  }
+
+  .product-1 {
+    background-image: url(../images/product_1_desktop.png);
+    padding-top: 530px;
+    gap: 15px;
+  }
+
+  .product-2 {
+    background-image: url(../images/product_2_desktop.png);
+    padding-top: 530px;
+    gap: 15px;
+  }
+
+  .product-3 {
+    background-image: url(../images/product_3_desktop.png);
+    padding-top: 530px;
+    gap: 15px;
+  }
+
+  .product-4 {
+    background-image: url(../images/product_4_desktop.png);
+    padding-top: 530px;
+    gap: 15px;
+  }
+
+  .product-5 {
+    background-image: url(../images/product_5_desktop.png);
+    padding-top: 530px;
+    gap: 15px;
   }
 
   .product-6 {
-    width: 402px;
-    height: 512px;
     background-image: url(../images/product_6_desktop.png);
     background-size: 402px 530px;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-top: 550px;
-    box-sizing: border-box;
-    gap: 5px;
+    padding-top: 555px;
+    gap: 15px;
   }
 
   .information_about_us {
@@ -390,10 +347,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-font-weight: 400;
-line-height: 150%;
-letter-spacing: -1%;
-
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: -1%;
   }
 
   .bakerlab {
@@ -423,13 +379,12 @@ letter-spacing: -1%;
 
   .social_buttons {
     width: 220px;
-
   }
 
   .contact_us_footer {
     width: 600px;
     height: 350px;
-    font-family: Inter, sans-serif;
+
     font-size: 72px;
     font-weight: 400;
     font-style: normal;
