--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -2,6 +2,7 @@
   * {
     font-family: Inter, sans-serif;
     font-style: normal;
+    scroll-behavior: smooth;
   }
 
   html,
@@ -9,7 +10,7 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     display: flex;
     flex-direction: column;
     height: auto;
@@ -31,14 +32,13 @@
     background-image: url(../images/cookie_background.png);
     background-repeat: no-repeat;
     background-size: 288px 290px;
-    width: 100%;
+    width: 288px;
     height: 606px;
     position: absolute;
     top: 250px;
-    left: 50%;
-    transform: translateX(-45%);
     text-align: center;
   }
+
   .navbar {
     height: 64px;
     padding: 0 10px;
@@ -330,7 +330,7 @@
     line-height: 150%;
     letter-spacing: -1%;
     color: #1c1a26;
-    width: 328px;
+    width: 288px;
   }
   .description_products-cake {
     font-weight: 400;
@@ -339,7 +339,7 @@
     line-height: 150%;
     letter-spacing: -1%;
     color: #1c1a26;
-    width: 280px;
+    width: 288px;
   }
   .order_button {
     font-weight: 500;
@@ -510,7 +510,6 @@
   .words {
     width: 270px;
     height: 216px;
-
     font-weight: 400;
     font-style: Regular;
     font-size: 15px;
@@ -607,9 +606,8 @@
   }
 
   .contact_us_footer {
-    width: 320px;
+    width: 280px;
     height: 300px;
-
     font-weight: 400;
     font-style: Regular;
     font-size: 56px;
@@ -620,7 +618,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 20%;
     box-sizing: border-box;
   }
 
