--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1200px;
+$big-desktop-min-width: 1440px;
+$tablet-h2-font-size: 56px;
+$desktop-h2-font-size: 72px;
+$page-orange-color: #f9512e;
+$page-main-text-color: #1c1a26;
+$page-main-bg-color: #ffeefc;
+$products-name-color: #7f8096;
+$effectDuriation: 0.3s;
+$footer-margin-top: 40px;
