--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './helpers/container';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/icon';
+@import './blocks/menu';
+@import './blocks/section';
+@import './blocks/products';
+@import './blocks/about-us';
+@import './blocks/footer';
 
-body {
-  background: $c-gray;
+.main {
+  padding-top: 104px;
+
+  @include on-tablet {
+    padding-top: 228px;
+  }
+
+  @include on-desktop {
+    padding-top: 160px;
+  }
+
+  @include on-big-desktop {
+    padding-top: 122px;
+  }
 }
