--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -292,6 +292,7 @@
     width: 288px;
     text-align: start;
     margin-top: 20%;
+
   }
   .subtitle_product {
     font-weight: 400;
@@ -311,6 +312,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 35%;
   }
   .title_product_cakes {
     font-weight: 500;
@@ -320,7 +322,7 @@
     letter-spacing: 2%;
     text-transform: uppercase;
     color: #7f8096;
-    margin-top: 20px;
+    margin-top: 0%;
   }
 
   .description_products-1 {
@@ -381,109 +383,69 @@
 
   .first_products_row {
     width: 288px;
-    height: 3500px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    align-items: center;
+    gap: 40px;
+    padding: 80px 0 140px;
     box-sizing: border-box;
-  }
-  .product_images-1 {
-    width: 288px;
-    height: 950px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 50px;
-    margin-top: 50px;
+
   }
 
-  .product_images-2 {
-    width: 288px;
-    height: 1000px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 50px;
-    margin-top: 60px;
-  }
-
+  .product_images-1,
+  .product_images-2,
   .product_images-3 {
     width: 288px;
-    height: 1000px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    gap: 60px;
+    align-items: center;
+    gap: 40px !important;
+    margin: 0;
+    padding: 0;
+    height: auto !important;
   }
 
   .product-base {
     width: 288px;
-    height: 492px;
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: contain;
+    height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    border-radius: 8px !important;
-  }
-
-  .product-1 {
-    background-image: url(../images/product_1_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
-  }
-
-  .product-2 {
-    background-image: url(../images/product_2_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
-  }
-
-  .product-3 {
-    background-image: url(../images/product_3_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
-  }
-
-  .product-4 {
-    background-image: url(../images/product_4_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
-  }
-
-  .product-5 {
-    background-image: url(../images/product_5_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
-  }
-
-  .product-6 {
-    background-image: url(../images/product_6_desktop.png);
-    background-size: 288px 356px;
-    padding-top: 380px;
+    align-items: flex-start;
     gap: 5px;
+    padding: 0;
+    margin: 0 !important;
+    box-sizing: border-box;
   }
-  .title_product {
-    font-weight: 500;
-    font-style: Medium;
-    font-size: 16px;
-    line-height: 100%;
-    letter-spacing: 2%;
-    text-transform: uppercase;
-    color: #7f8096;
+
+  .product_img {
+    width: 288px !important;
+    height: 356px !important;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 8px !important;
+    display: block;
+    margin: 0% 0% 24px;
+    background-color: #f8f8f8;
+    transition: all 0.3s ease;
+    cursor: pointer;
   }
-  .information_about_us {
-    width: 288px;
-    height: 596px;
-    min-height: 580px;
-    background-size: 580px 540px;
-    background-position: calc(50% + 20px) center;
-    padding: 0.1px;
-    display: flex;
-    flex-direction: column;
-    margin-top: 20%;
+
+  .product_img:hover {
+    transform: translateY(-8px) scale(1.08);
+  }
+  .product-base:last-child,
+  .product_images-1 .product-base:last-child,
+  .product_images-2 .product-base:last-child,
+  .product_images-3 .product-base:last-child{
+    margin-bottom: 0 !important;
+  }
+
+  .product_images-1,
+  .product_images-2,
+  .product_images-3,
+  .first_products_row {
+    height: auto !important;
   }
 
   .about {
