--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -221,7 +221,6 @@
     box-sizing: border-box;
   }
 
-  /* ===== TEXTO PRINCIPAL: ESQUERDA ===== */
   .text_main {
     width: 290px;
     font-size: 16px;
@@ -231,7 +230,6 @@
     align-self: flex-start;
   }
 
-  /* ===== TÍTULO: CENTRO ===== */
   .creative_bakery {
     width: 100%;
     max-width: 720px;
@@ -243,7 +241,6 @@
     align-items: start;
   }
 
-  /* ===== BOTÃO: CENTRO ===== */
   .learn_more_button {
     width: 326px;
     height: 56px !important;
@@ -271,8 +268,8 @@
     align-items: start;
     display: flex;
     flex-direction: column;
-    gap: -80px;
   }
+
   .title_product_cakes {
     font-weight: 500;
     font-style: Medium;
@@ -281,7 +278,7 @@
     letter-spacing: 2%;
     text-transform: uppercase;
     color: #7f8096;
-    margin-top: 20px;
+    margin-top: 0%;
   }
 
   .description_products-1 {
@@ -340,79 +337,57 @@
     background-size: contain;
   }
 
-  .first_products_row {
-    width: 100%;
-    max-width: 680px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    height: 2200px;
-  }
+.first_products_row {
+  width: 680px;
+  margin: 80px auto 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 0 20px;
+  box-sizing: border-box;
+  height: 2000px;
+  justify-content: start;
+}
 
-  .product-base {
-    width: 100%;
-    height: 424px;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: start;
-    text-align: start;
-    border-radius: 8px !important;
-    box-sizing: border-box;
-  }
+.product_images-1,
+.product_images-2,
+.product_images-3 {
+  width: 328px;
+  height: 560px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-direction: row;
+  align-items: end;
+}
 
-  .product-1 {
-    background-image: url(../images/product_1_desktop.png);
-    background-size: contain;
-    padding-top: 440px;
-    gap: 15px;
-  }
 
-  .product-2 {
-    background-image: url(../images/product_2_desktop.png);
-    background-size: contain;
-    padding-top: 440px;
-    gap: 15px;
-  }
+.product-base {
+  width: 328px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  box-sizing: border-box;
+}
 
-  .product-3 {
-    background-image: url(../images/product_3_desktop.png);
-    background-size: contain;
-    padding-top: 440px;
-  }
+.product_img {
+  width: 328px !important;
+  height: 424px !important;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 8px !important;
+  display: block;
+  background-color: #f8f8f8;
+  transition: all 0.35s ease;
+  cursor: pointer;
+}
 
-  .product-4 {
-    background-image: url(../images/product_4_desktop.png);
-    background-size: contain;
-    padding-top: 440px;
-  }
-
-  .product-5 {
-    background-image: url(../images/product_5_desktop.png);
-    background-size: 402px 530px;
-    padding-top: 420px;
-  }
-
-  .product-6 {
-    background-image: url(../images/product_6_desktop.png);
-    background-size: 402px 530px;
-    background-size: contain;
-    padding-top: 440px;
-    gap: 15px;
-    text-align: start;
-  }
-
-  .product_images-1,
-  .product_images-2,
-  .product_images-3 {
-    width: 100%;
-    max-width: 680px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-  }
+.product_img:hover {
+  transform: translateY(-12px) scale(1.08);
+}
 
   .title_product_main {
     font-weight: 400;
@@ -439,6 +414,7 @@
     text-transform: uppercase;
     color: #7f8096;
   }
+
   .information_about_us {
     width: 680px;
     height: 596px;
