--- a/src/styles/_desktop_1200.scss
+++ b/src/styles/_desktop_1200.scss
@@ -115,21 +115,12 @@
     width: 584px;
     height: 24px;
     margin-left: 15px;
-
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
     line-height: 150%;
     letter-spacing: -1%;
     color: #1c1a26;
-  }
-
-  .product_images-1 {
-    width: 825px;
-    height: 696px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
   }
 
   .title_product {
@@ -144,7 +135,6 @@
 
   .description_products-1 {
     width: 402px;
-
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -155,7 +145,6 @@
 
   .description_products-cake {
     width: 280px;
-
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -167,7 +156,6 @@
   .order_button {
     width: 120px;
     height: 32px;
-
     font-size: 16px;
     font-weight: 500;
     line-height: normal;
@@ -204,81 +192,91 @@
     background-size: contain;
   }
 
-  .first_products_row {
-    max-width: 1112px;
-    margin: 0 auto;
-    height: 2293px;
-    display: flex;
-    flex-direction: column;
-    gap: 75px;
-    overflow: hidden;
-    justify-content: flex-start;
-    box-sizing: border-box;
-  }
+.first_products_row {
+  max-width: 1112px;
+  margin: 80px auto 0;
+  display: flex;
+  flex-direction: column;
+  gap: 75px;
+  padding: 0 20px;
+  box-sizing: border-box;
+  height: auto !important;
+  overflow: visible;
+}
 
-  .product_images-2 {
-    width: 825px;
-    height: 696px;
-    margin-left: 300px;
-    max-width: 100%;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.product_images-1,
+.product_images-3 {
+  width: 825px;
+  margin-left: 0;
+  margin-right: auto;
+  display: flex;
+  justify-content: flex-start;
+  gap: 24px;
+}
 
-  .product_images-3 {
-    width: 825px;
-    height: 725px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.product_images-2 {
+  width: 825px;
+  margin-left: auto;
+  margin-right: 0;
+  display: flex;
+  justify-content: flex-start;
+  gap: 24px;
+}
 
-  .product-base {
-    width: 402px;
-    height: 512px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    border-radius: 8px !important;
-    text-align: start;
-  }
+.product-base {
+  width: 402px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
+  box-sizing: border-box;
+}
 
-  .product-1 {
-    padding-top: 530px;
-    gap: 15px;
-  }
+.product_img {
+  width: 402px !important;
+  height: 530px !important;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 8px !important;
+  display: block;
+  background-color: #f8f8f8;
+  transition: all 0.35s ease;
+  cursor: pointer;
+}
 
-  .product-2 {
-    padding-top: 530px;
-    gap: 15px;
-  }
+.product_img:hover {
+  transform: translateY(-12px) scale(1.08);
+}
 
-  .product-3 {
-    padding-top: 530px;
-    gap: 15px;
-  }
+.title_product,
+.title_product_cakes {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 2%;
+  text-transform: uppercase;
+  color: #7f8096;
+  margin: 0;
+}
 
-  .product-4 {
-    padding-top: 530px;
-    gap: 15px;
-  }
+.description_products-1,
+.description_products-cake {
+  font-size: 16px;
+  line-height: 150%;
+  color: #1c1a26;
+  margin: 0;
+}
 
-  .product-5 {
-    padding-top: 530px;
-    gap: 15px;
-  }
+.product-1, .product-2, .product-3, .product-4, .product-5, .product-6 {
+  padding-top: 0 !important;
+  background: none !important;
+}
 
-  .product-6 {
-    background-size: 402px 530px;
-    padding-top: 555px;
-    gap: 15px;
-  }
+.product_images-1,
+.product_images-2,
+.product_images-3 {
+  height: auto !important;
+}
 
   .information_about_us {
     width: 1112px;
