--- a/src/styles/_desktop_1200.scss
+++ b/src/styles/_desktop_1200.scss
@@ -272,6 +272,10 @@
   background: none !important;
 }
 
+.product-6 .product_img {
+  height: 530px !important;
+}
+
 .product_images-1,
 .product_images-2,
 .product_images-3 {
