--- a/src/styles/_mobile_320.scss
+++ b/src/styles/_mobile_320.scss
@@ -434,6 +434,7 @@
   .product_img:hover {
     transform: translateY(-8px) scale(1.08);
   }
+
   .product-base:last-child,
   .product_images-1 .product-base:last-child,
   .product_images-2 .product-base:last-child,
@@ -448,6 +449,9 @@
     height: auto !important;
   }
 
+.product-6 .product_img {
+  height: 356px !important;
+}
   .about {
     width: 288px;
     height: 216px;
