--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -384,7 +384,9 @@
   transition: all 0.35s ease;
   cursor: pointer;
 }
-
+.product-6 .product_img {
+  height: 424px !important;
+}
 .product_img:hover {
   transform: translateY(-12px) scale(1.08);
 }
