--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,6 +2,7 @@
   display: flex;
   background-color: $black;
   justify-content: center;
+  font-family: Inter, sans-serif;
 
   &__content {
     box-sizing: border-box;
